--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+body {
+    line-height: 20px;
+    margin-right: 30%;
+    margin-left: 30%;
+}
+
 h1 {
     font-family: fantasy;
 }
@@ -8,4 +14,5 @@ h2 {
 
 p {
     font-family: monospace;
+    text-align: left;
 }
